[project]
name = "elastica-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pyelastica>=0.3.3.post2",
    "rich>=15.0.0",
    "stable-baselines3>=2.8.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
]
